unpackaged/main/default/objects/Application__c/fields/Total_Amount_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Inc_VAT__c</fullName>
    <formula>IF(
(Amount_Ex_VAT__c  +  VAT__c)- (FLOOR(Amount_Ex_VAT__c  +  VAT__c)) &gt;= 0.1,
(Amount_Ex_VAT__c  +  VAT__c),
FLOOR(Amount_Ex_VAT__c  +  VAT__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>