unpackaged/main/default/objects/Application__c/fields/Unannounced__c.field-meta.xml
<CustomField>
    <fullName>Unannounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unannounced</label>
    <type>Checkbox</type>
</CustomField>