unpackaged/main/default/objects/Application__c/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <inlineHelpText>An application for a new unit or extension to flock size mid certificate</inlineHelpText>
    <label>Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Unit</fullName>
            </value>
            <value>
                <fullName>Update to flock size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>