unpackaged/main/default/objects/Application__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>IF( Head_Office__r.BillingCountry = &#39;United Kingdom&#39;,
				Amount_Ex_VAT__c * 0.2,
			0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Head Office billing country is the United Kingdom, then the VAT is 20%. Otherwise, VAT is 0%.</inlineHelpText>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>