unpackaged/main/default/objects/Application__c/fields/VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_Number__c</fullName>
    <description>VAT Registration Number from head office.</description>
    <formula>Head_Office__r.VAT_Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>VAT Registration Number from head office.</inlineHelpText>
    <label>VAT Registration Number</label>
    <type>Text</type>
</CustomField>