unpackaged/main/default/objects/Application__c/fields/Visit_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Visit_Deadline__c</fullName>
    <inlineHelpText>This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Visit Deadline</label>
    <type>Date</type>
</CustomField>