unpackaged/main/default/objects/Application__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <inlineHelpText>This field must be populated in order to mark an Additional Visit as complete.</inlineHelpText>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Sanction</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
            <value>
                <fullName>Virtual Visit</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
                <isActive>false</isActive>
                <label>Monitoring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>