unpackaged/main/default/objects/Application__c/fields/Welfare_Outcome_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Welfare_Outcome_Assessment__c</fullName>
    <label>Welfare Outcome Assessment</label>
    <type>Url</type>
</CustomField>