unpackaged/main/default/objects/Application__c/fields/What3Words__c.field-meta.xml
<CustomField>
    <fullName>What3Words__c</fullName>
    <formula>Site__r.What3Words__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What3Words</label>
    <type>Text</type>
</CustomField>