unpackaged/main/default/objects/Application__c/fields/X12_weeks_without_assessment__c.field-meta.xml
<CustomField>
    <fullName>X12_weeks_without_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12 weeks without assessment</label>
    <type>Checkbox</type>
</CustomField>