unpackaged/main/default/objects/Application__c/recordTypes/Additional_Visit.recordType-meta.xml
<RecordType>
    <fullName>Additional_Visit</fullName>
    <active>true</active>
    <description>Used to record the additional visit process for a site under sanction</description>
    <label>Additional Visit</label>
</RecordType>