unpackaged/main/default/objects/Application__c/recordTypes/Applications.recordType-meta.xml
<RecordType>
    <fullName>Applications</fullName>
    <active>true</active>
    <description>For new applications.</description>
    <label>Applications</label>
</RecordType>