unpackaged/main/default/objects/Application__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Other Application Type.</description>
    <label>Other</label>
</RecordType>