unpackaged/main/default/objects/Application__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <description>For renewal applications</description>
    <label>Renewal</label>
</RecordType>