unpackaged/main/default/objects/Application__c/validationRules/Additional_Visit_Evidence.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Visit_Evidence</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &#39;Additional_Visit&#39;,
TEXT(Stage__c ) = &#39;Review&#39;,
ISBLANK(Evidence__c) 
)</errorConditionFormula>
    <errorDisplayField>Evidence__c</errorDisplayField>
    <errorMessage>Evidence must be populated before moving the stage to &#39;Review&#39;</errorMessage>
</ValidationRule>