unpackaged/main/default/objects/Application__c/validationRules/Agreement_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_Mandatory</fullName>
    <active>true</active>
    <description>Agreement Mandatory</description>
    <errorConditionFormula>AND(
					No_Offences__c = true,  
					Agreement__c = false
	)</errorConditionFormula>
    <errorDisplayField>Agreement__c</errorDisplayField>
    <errorMessage>You must agree to the terms of the membership agreement.</errorMessage>
</ValidationRule>