unpackaged/main/default/objects/Application__c/validationRules/Allocation_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation_rejected</fullName>
    <active>true</active>
    <description>Cannot progress to the next stage without an approved inspector allocation.</description>
    <errorConditionFormula>/* If the application record type is Additional Visit */

RecordType.DeveloperName = &#39;Additional_Visit&#39;
&amp;&amp;
ISPICKVAL(Stage__c, &quot;Visit&quot;)

&amp;&amp; 
 ISPICKVAL(Allocation_Status__c, &quot;Rejected&quot;)</errorConditionFormula>
    <errorDisplayField>Allocation_Status__c</errorDisplayField>
    <errorMessage>The allocated inspector has rejected this allocation. Please choose a new assessor.</errorMessage>
</ValidationRule>