unpackaged/main/default/objects/Application__c/validationRules/Animals_at_Assessment_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Animals_at_Assessment_Renewal</fullName>
    <active>true</active>
    <description>Animals at assessment must be populated for all units before moving to &#39;Compliance&#39; stage.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &#39;Renewal&#39;,
     TEXT(Renewal_Stage__c ) = &#39;Compliance&#39;,
				 Animals_at_Assessment_not_populated__c  &gt; 0
			)</errorConditionFormula>
    <errorMessage>Animals at assessment must be populated for all units before moving to &#39;Compliance&#39; stage.</errorMessage>
</ValidationRule>