unpackaged/main/default/objects/Application__c/validationRules/Assessment_Date_Cannot_Exceed_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Date_Cannot_Exceed_Deadline</fullName>
    <active>false</active>
    <description>Assessment Date Cannot Exceed Deadline Date</description>
    <errorConditionFormula>Assessment_Date__c  &gt;  Assessment_Deadline__c</errorConditionFormula>
    <errorDisplayField>Assessment_Date__c</errorDisplayField>
    <errorMessage>Assessment Date cannot exceed the deadline date.</errorMessage>
</ValidationRule>