unpackaged/main/default/objects/Application__c/validationRules/Assessor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessor_Required</fullName>
    <active>true</active>
    <description>Assessor Required for Scheduling an Assessment.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Assessment_Date__c)),
    ISBLANK(Assessor__c),
    NOT(TEXT(Allocation_Status__c) = &#39;Accepted&#39;)
   )</errorConditionFormula>
    <errorDisplayField>Assessor__c</errorDisplayField>
    <errorMessage>Assessor must be allocated and allocation must be accepted in order to schedule an assessment date.</errorMessage>
</ValidationRule>