unpackaged/main/default/objects/Application__c/validationRules/Check_field_empty_visit_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_field_empty_visit_complete</fullName>
    <active>true</active>
    <description>If the Check field is blank, the visit can not move to the Complete stage.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Stage__c, &quot;Complete&quot;),
RecordType.DeveloperName = &#39;Additional_Visit&#39;,

ISBLANK(
 Check__c
))</errorConditionFormula>
    <errorDisplayField>Check__c</errorDisplayField>
    <errorMessage>You must enter what needs to be checked in order to mark this visit as complete.</errorMessage>
</ValidationRule>