unpackaged/main/default/objects/Application__c/validationRules/DTA_AdditionalVisit.validationRule-meta.xml
<ValidationRule>
    <fullName>DTA_AdditionalVisit</fullName>
    <active>true</active>
    <description>Desktop Assessment field must be populated before moving to &#39;Review&#39; stage.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &#39;Additional_Visit&#39;,
     TEXT(Stage__c ) = &#39;Review&#39;,
    OR(
       ISPICKVAL(DTA__c , &quot;NONE&quot;),
       ISBLANK(TEXT(DTA__c))
      )
    )</errorConditionFormula>
    <errorMessage>Desktop Assessment field must be populated before moving to &#39;Review&#39; stage.</errorMessage>
</ValidationRule>