unpackaged/main/default/objects/Application__c/validationRules/DTA_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>DTA_Application</fullName>
    <active>true</active>
    <description>Desktop Assessment field must be populated before moving to &#39;Compliance&#39; stage.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &#39;Applications&#39;,
 OR(
    ISPICKVAL(DTA__c , &quot;NONE&quot;),
    ISBLANK(TEXT(DTA__c))
    ),
 OR(
    TEXT(Stage__c ) = &#39;Compliance&#39;,
    TEXT(Stage__c ) = &#39;Certification&#39;
    )
)</errorConditionFormula>
    <errorMessage>Desktop Assessment field must be populated before moving to &#39;Compliance&#39; stage.</errorMessage>
</ValidationRule>