unpackaged/main/default/objects/Application__c/validationRules/DTA_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>DTA_Renewal</fullName>
    <active>true</active>
    <description>Desktop Assessment field must be populated before moving to &#39;Compliance&#39; stage.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &#39;Renewal&#39;,
     TEXT(Renewal_Stage__c ) = &#39;Compliance&#39;,
   OR(
      ISPICKVAL(DTA__c , &quot;NONE&quot;),
      ISBLANK(TEXT(DTA__c))
      )
    )</errorConditionFormula>
    <errorMessage>Desktop Assessment field must be populated before moving to &#39;Compliance&#39; stage.</errorMessage>
</ValidationRule>