unpackaged/main/default/objects/Application__c/validationRules/Evidence_Required_On_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Evidence_Required_On_Review</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(RecordType.DeveloperName = &#39;Applications&#39;, RecordType.DeveloperName =&#39;Renewal&#39;),
OR(Calculated_Stage__c = &#39;Review&#39;, Calculated_Stage__c = &#39;Compliance&#39; ),
ISBLANK(Evidence__c)
)</errorConditionFormula>
    <errorDisplayField>Evidence__c</errorDisplayField>
    <errorMessage>Evidence must be populated before moving the stage to &#39;Review&#39; or &#39;Compliance&#39;</errorMessage>
</ValidationRule>