unpackaged/main/default/objects/Application__c/validationRules/Extension_reason_must_be_provided.validationRule-meta.xml
<ValidationRule>
    <fullName>Extension_reason_must_be_provided</fullName>
    <active>true</active>
    <description>If extension is granted, extension reason must be provided.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Extension_Granted__c, &#39;Yes&#39;),
				ISBLANK(Reason_for_extension__c) 
				)</errorConditionFormula>
    <errorDisplayField>Reason_for_extension__c</errorDisplayField>
    <errorMessage>If extension is granted, reason for extension must be provided.</errorMessage>
</ValidationRule>