unpackaged/main/default/objects/Application__c/validationRules/Inspector_allocated_to_complete_visit.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspector_allocated_to_complete_visit</fullName>
    <active>true</active>
    <description>If the Allocated Inspector field is blank, the visit can not move to the Complete stage.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Stage__c, &quot;Complete&quot;),
RecordType.DeveloperName = &#39;Additional_Visit&#39;,

ISBLANK(
 Allocated_Inspector__c 
))</errorConditionFormula>
    <errorDisplayField>Allocated_Inspector__c</errorDisplayField>
    <errorMessage>An Allocated Inspector must be populated in order to mark this visit as complete.</errorMessage>
</ValidationRule>