unpackaged/main/default/objects/Application__c/validationRules/IsCompleted_on_WOAs_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>IsCompleted_on_WOAs_Renewal</fullName>
    <active>true</active>
    <description>IsCompleted on WOAs must be checked for all WOAs before moving to &#39;Compliance&#39; stage.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName=&#39;Renewal&#39;, 
     TEXT( Renewal_Stage__c )=&#39;Compliance&#39;,
     IsCompleted_on_WOAs__c &gt;0 )</errorConditionFormula>
    <errorMessage>IsCompleted checkbox must be checked for all WOAs before moving to Compliance stage.</errorMessage>
</ValidationRule>