unpackaged/main/default/objects/Application__c/validationRules/Must_populate_other_outcome_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_populate_other_outcome_reason</fullName>
    <active>true</active>
    <description>If Other is selected from Outcome of Visit, a text area must be populated</description>
    <errorConditionFormula>ISPICKVAL(Outcome_of_Visit__c, &quot;Other&quot;) 
&amp;&amp; ISBLANK( Other_Outcome_of_Visit__c )</errorConditionFormula>
    <errorDisplayField>Other_Outcome_of_Visit__c</errorDisplayField>
    <errorMessage>Please specify what the outcome of the visit was.</errorMessage>
</ValidationRule>