unpackaged/main/default/objects/Application__c/validationRules/Must_populate_report_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_populate_report_field</fullName>
    <active>true</active>
    <description>Ensures a report is attached before completing this visit.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Stage__c, &quot;Complete&quot;),

									ISBLANK(Report__c))</errorConditionFormula>
    <errorDisplayField>Report__c</errorDisplayField>
    <errorMessage>A report must be provided in order to mark this visit as complete.</errorMessage>
</ValidationRule>