unpackaged/main/default/objects/Application__c/validationRules/New_Application_Approval_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Application_Approval_Validation</fullName>
    <active>true</active>
    <description>Cannot move to the certified stage without overall approval resulting in &#39;Yes&#39;.</description>
    <errorConditionFormula>AND(
     RecordType.DeveloperName = &#39;Applications&#39;,
     Approvals_Complete__c = &#39;No&#39;,
     TEXT(Stage__c)  = &#39;Certification&#39;
    )</errorConditionFormula>
    <errorMessage>Cannot move to certification without having overall approval.</errorMessage>
</ValidationRule>