unpackaged/main/default/objects/Application__c/validationRules/No_Offences_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Offences_Mandatory</fullName>
    <active>true</active>
    <description>No offences mandatory</description>
    <errorConditionFormula>AND(
					No_Offences__c = false,  
					Agreement__c = true
	)</errorConditionFormula>
    <errorDisplayField>No_Offences__c</errorDisplayField>
    <errorMessage>You must confirm that do not have any previous convictions or pending prosecutions.</errorMessage>
</ValidationRule>