unpackaged/main/default/objects/Application__c/validationRules/Paid_Mandatory_for_Applications.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Mandatory_for_Applications</fullName>
    <active>true</active>
    <description>Application must be paid for in order to move to the next stage.</description>
    <errorConditionFormula>AND(
					RecordType.DeveloperName = &#39;Applications&#39;,
					Paid__c = false,
					NOT(ISPICKVAL(Stage__c, &#39;Application&#39;))
					)</errorConditionFormula>
    <errorDisplayField>Paid__c</errorDisplayField>
    <errorMessage>Application must be paid in order to progress to the next stage.</errorMessage>
</ValidationRule>