unpackaged/main/default/objects/Application__c/validationRules/Paid_Mandatory_for_Renewals.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Mandatory_for_Renewals</fullName>
    <active>true</active>
    <description>Renewal must be paid for in order to move to the next stage.</description>
    <errorConditionFormula>AND(
					RecordType.DeveloperName = &#39;Renewal&#39;,
					Paid__c = false,
					NOT(ISPICKVAL(Renewal_Stage__c, &#39;Renewal&#39;))
					)</errorConditionFormula>
    <errorDisplayField>Paid__c</errorDisplayField>
    <errorMessage>Renewal must be paid in order to progress to the next stage.</errorMessage>
</ValidationRule>