unpackaged/main/default/objects/Application__c/validationRules/RecordType_ApplicationType_Restrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordType_ApplicationType_Restrictions</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND( 
RecordType.Name = &#39;Other&#39;,  ISPICKVAL( Application_Type__c , &#39;New&#39;) 
)
)</errorConditionFormula>
    <errorMessage>This Application Type field value is not valid for Other Application creation</errorMessage>
</ValidationRule>