unpackaged/main/default/objects/Application__c/validationRules/Validate_Evidence_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Evidence_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR(RecordType.DeveloperName = &#39;Applications&#39;, RecordType.DeveloperName =&#39;Renewal&#39;),
OR(Calculated_Stage__c = &#39;Review&#39;, Calculated_Stage__c = &#39;Compliance&#39; ),
ISBLANK(TEXT(Evidence_Required__c))
)</errorConditionFormula>
    <errorDisplayField>Evidence_Required__c</errorDisplayField>
    <errorMessage>Evidence required must be populated before moving the stage to &#39;Review&#39;  or &#39;Compliance&#39;</errorMessage>
</ValidationRule>