unpackaged/main/default/objects/Application__c/validationRules/Visit_deadline_field_empty_visit_complet.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_deadline_field_empty_visit_complet</fullName>
    <active>true</active>
    <description>If the Visit Dadline field is blank, the visit can not move to the Complete stage.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Stage__c, &quot;Complete&quot;),
RecordType.DeveloperName = &#39;Additional_Visit&#39;,

ISBLANK(
 Visit_Deadline__c)
)</errorConditionFormula>
    <errorDisplayField>Visit_Deadline__c</errorDisplayField>
    <errorMessage>You must provide a deadline for this visit in order to mark it as complete.</errorMessage>
</ValidationRule>