unpackaged/main/default/objects/Application__c/validationRules/Visit_reason_field_empty_visit_complet.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_reason_field_empty_visit_complet</fullName>
    <active>false</active>
    <description>If the Reason for Visit field is blank, the visit can not move to the Complete stage.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Stage__c, &quot;Complete&quot;),
RecordType.DeveloperName = &#39;Additional_Visit&#39;,

ISPICKVAL(Reason_for_Visit__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Visit__c</errorDisplayField>
    <errorMessage>You must provide a reason for this visit in order to mark it as complete.</errorMessage>
</ValidationRule>